tests/invalid/for_zip_unpack_wrong_target_count/main.py
def run_case() -> None:
    for a, b, c in zip([1, 2], [3, 4]):
        print(a + b + c)

if __name__ == "__main__":
    run_case()
